WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77104
Fix build when VERBOSE_SPECULATION_FAILURE is enabled in DFG
https://bugs.webkit.org/show_bug.cgi?id=77104
Summary
Fix build when VERBOSE_SPECULATION_FAILURE is enabled in DFG
Peter Varga
Reported
2012-01-26 08:26:18 PST
The following failure occurs during compilation when VERBOSE_SPECULATION_FAILURE macro is enabled: ../../../../Source/JavaScriptCore/dfg/DFGOperations.cpp: In function 'void JSC::DFG::debugOperationPrintSpeculationFailure(JSC::ExecState*, void*)': ../../../../Source/JavaScriptCore/dfg/DFGOperations.cpp:1014: error: 'exec' was not declared in this scope
Attachments
proposed patch
(1.59 KB, patch)
2012-01-26 08:29 PST
,
Peter Varga
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Varga
Comment 1
2012-01-26 08:29:00 PST
Created
attachment 124120
[details]
proposed patch Add missing exec to the parameter list.
Jessie Berlin
Comment 2
2012-01-26 08:45:58 PST
Build fixes like this can be checked in without review.
Filip Pizlo
Comment 3
2012-01-26 14:13:58 PST
Comment on
attachment 124120
[details]
proposed patch R=me. As Jessie said, you're welcome to commit changes like this without review!
WebKit Review Bot
Comment 4
2012-01-26 14:55:41 PST
Comment on
attachment 124120
[details]
proposed patch Clearing flags on attachment: 124120 Committed
r106049
: <
http://trac.webkit.org/changeset/106049
>
WebKit Review Bot
Comment 5
2012-01-26 14:55:45 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug